// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`End to end test with mock data and mock templates from github repos Test CardRenderer for HandleBars and Teams 1`] = `
"{
  \\"title\\": \\"Test Post\\",
  \\"author\\": \\"Tester\\"
  \\"createdOn\\": \\"1594060200000\\",
  \\"text\\": \\"This is mock data of a post\\" 
}"
`;

exports[`End to end test with mock data and mock templates from github repos Test CardRenderer for HandleBars, Teams and MockData 1`] = `"Hello Test"`;

exports[`End to end test with mock data and mock templates from github repos Test CardRenderer for HandleBars, Teams and TestHelperFunction 1`] = `"Testing helper functions. The name should be in upper case : TEST and lower case here : test"`;

exports[`End to end test with mock data and mock templates from github repos Test CardRenderer for Liquid and Teams 1`] = `
"{
  \\"title\\": \\"TEST POST\\",
  \\"author\\": \\"Tester\\"
  \\"createdOn\\": \\"1594060200000\\",
  \\"text\\": \\"This is mock data of a post\\" 
}"
`;

exports[`End to end test with mock data and mock templates from github repos Test CardRenderer for Liquid, Teams and MockData 1`] = `"Hello TEST"`;

exports[`End to end test with mock data and mock templates from github repos Test CardRenderer for Liquid, Teams and TestHelperFunction 1`] = `
"Testing helper functions. The name should be in upper case : TEST and lower case here : test
This will also be in upper case using the tag upperTest: TEST"
`;

exports[`End to end test with mock data and mock templates from github repos Test EventTransformer for HandleBars 1`] = `"Hello Test"`;

exports[`End to end test with mock data and mock templates from github repos Test EventTransformer for Liquid 1`] = `"Hello test"`;

exports[`End to end test with mock data and mock templates from local filesystem Test CardRenderer for HandleBars and Teams 1`] = `
"{
  \\"title\\": \\"Test Post\\",
  \\"author\\": \\"Tester\\"
  \\"createdOn\\": \\"1594060200000\\",
  \\"text\\": \\"This is mock data of a post\\" 
}"
`;

exports[`End to end test with mock data and mock templates from local filesystem Test CardRenderer for HandleBars, Teams and MockData 1`] = `"Hello Test"`;

exports[`End to end test with mock data and mock templates from local filesystem Test CardRenderer for HandleBars, Teams and TestHelperFunction 1`] = `"Testing helper functions. The name should be in upper case : TEST and lower case here : test"`;

exports[`End to end test with mock data and mock templates from local filesystem Test CardRenderer for Liquid and Teams 1`] = `
"{
  \\"title\\": \\"TEST POST\\",
  \\"author\\": \\"Tester\\"
  \\"createdOn\\": \\"1594060200000\\",
  \\"text\\": \\"This is mock data of a post\\" 
}"
`;

exports[`End to end test with mock data and mock templates from local filesystem Test CardRenderer for Liquid, Teams and MockData 1`] = `"Hello TEST"`;

exports[`End to end test with mock data and mock templates from local filesystem Test CardRenderer for Liquid, Teams and TestHelperFunction 1`] = `
"Testing helper functions. The name should be in upper case : TEST and lower case here : test
This will also be in upper case using the tag upperTest: TEST"
`;

exports[`End to end test with mock data and mock templates from local filesystem Test EventTransformer for HandleBars 1`] = `"Hello Test"`;

exports[`End to end test with mock data and mock templates from local filesystem Test EventTransformer for Liquid 1`] = `"Hello test"`;
